[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "packaging",
  "tox-uv>=1.35.2",
  {include-group = "lint"},
  {include-group = "test"}
]
docs = [
  "furo",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-trio"
]
lint = [
  "pre-commit",
  "ruff>=0.15.17",
  {include-group = "docs"}
]
test = [
  "aiohttp<3.14", # vcrpy's aiohttp stubs break on 3.14+ (AsyncStreamReaderMixin removed); fixed by kevin1024/vcrpy#996, unreleased as of 8.1.1
  "coverage>=7.14.1",
  "pytest>=9.0.3",
  "pytest-asyncio==1.4.*",
  "pytest-vcr==1.*",
  "vcrpy>=8.1.1"
]
type = [
  "pyright>=1.1.410",
  {include-group = "test"}
]

[project]
authors = [{email = "lilspazjoekp@gmail.com", name = "Joel Payne"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "aiofiles",
  "aiohttp<4",
  "asyncprawcore>=3.1.0,<4",
  "defusedxml==0.7.1",
  "typing-extensions; python_version <= '3.10'",
  "update_checker[async]>=1.0,<2.0"
]
description = "Asynchronous Python Reddit API Wrapper."
dynamic = ["version"]
keywords = ["reddit", "api", "wrapper", "asyncpraw", "praw", "async", "asynchronous"]
license = {file = "LICENSE.txt"}
maintainers = [
  {email = "lilspazjoekp@gmail.com", name = "Joel Payne"},
  {email = "bbzbryce@gmail.com", name = "Bryce Boe"}
]
name = "asyncpraw"
readme = "README.rst"
requires-python = ">=3.10"

[project.urls]
"Change Log" = "https://asyncpraw.readthedocs.io/en/latest/package_info/change_log.html"
"Documentation" = "https://asyncpraw.readthedocs.io/"
"Issue Tracker" = "https://github.com/praw-dev/asyncpraw/issues"
"Source Code" = "https://github.com/praw-dev/asyncpraw"

[tool.coverage.report]
exclude_lines = [
  "@abstract",
  "@overload",
  "if TYPE_CHECKING:",
  "pragma: no cover"
]
fail_under = 100

[tool.docstrfmt]
extend_exclude = ['./docs/examples/']

[tool.hatch.version]
path = "asyncpraw/const.py"

[tool.pyright]
include = ["asyncpraw", "tests/typing"]
pythonVersion = "3.10"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"
testpaths = "tests"

[tool.ruff]
include = ["*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = [
  "ANN401", # any-type
  "C901", # too complex
  "COM812", # trailing comma missing (conflicts with the formatter)
  "CPY001", # missing copyright notice
  "D203", # incorrect-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "DOC201", # `return` not documented in docstring
  "DOC402", # `yield` not documented in docstring
  "DOC501", # `raise` not documented in docstring
  "E501", # Line too long
  "ISC001", # single-line implicit string concatenation (conflicts with the formatter)
  "PERF203", # `try`-`except` within a loop
  "PLR0904", # Too many public methods
  "PLR0911", # Too many return statements
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "RUF067", # `__init__` module should only contain docstrings and re-exports
  "S101", # use of assert
  "SLF001" # Private member accessed
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Non-library code (tests, examples, maintenance scripts) is not held to the
# same docstring/annotation/style strictness as the package source.
"__init__.py" = ["F401"]
"asyncpraw/models/mod_notes.py" = ["FA100"]
"asyncpraw/models/reddit/collections.py" = ["A005"]
"docs/conf.py" = ["A001", "ANN", "ARG", "D", "DTZ002", "INP001", "PLR0917"]
"docs/examples/*.py" = ["ANN", "ARG", "ASYNC", "D", "INP", "PLR", "S", "T20"]
"tests/**/*.py" = [
  "A", # builtin shadowing
  "ANN", # type annotations
  "ARG", # unused arguments (pytest fixtures)
  "ASYNC", # blocking calls in async test helpers
  "B", # bugbear (asserts attribute access, loop vars)
  "C4", # comprehensions
  "D", # docstrings
  "DTZ", # naive datetimes
  "EM", # exception message strings
  "ERA", # commented-out code
  "FBT", # boolean traps
  "FIX", # TODO/FIXME comments
  "INP", # implicit namespace package
  "ISC", # implicit string concatenation
  "N", # naming
  "PLC", # pylint convention
  "PLR", # pylint refactor (no-self-use, magic values, self-comparison)
  "PLW", # pylint warning
  "PT", # pytest style
  "PTH", # use pathlib
  "PYI", # stub-only rules
  "RET", # unnecessary assignment before return
  "RSE", # raise
  "RUF", # ruff-specific
  "S", # bandit (assert, pickle, hardcoded secrets)
  "SIM", # simplify
  "SLF", # private member access
  "T20", # print
  "TID", # relative imports
  "TRY", # tryceratops (long exception messages)
  "UP" # pyupgrade (percent formatting)
]
"tools/*.py" = ["ANN", "D", "DTZ", "FBT", "INP", "PLR", "PLW", "PTH", "RUF", "S", "T20"]

[tool.tomlsort]
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "docs", "pre-commit", "type"]
minversion = "4.22"

[tool.tox.env.docs]
base_python = ["py314"]
commands = [
  ["sphinx-build", "-W", "--keep-going", "-n", "docs/", "{env_tmp_dir}/html"]
]
dependency_groups = ["docs"]
description = "build docs with sphinx"
runner = "uv-venv-lock-runner"

[tool.tox.env.linkcheck]
base_python = ["py314"]
commands = [
  ["sphinx-build", "--keep-going", "-b", "linkcheck", "docs/", "{env_tmp_dir}/linkcheck"]
]
dependency_groups = ["docs"]
description = "check documentation for broken external links"
runner = "uv-venv-lock-runner"

[tool.tox.env.pre-commit]
commands = [
  ["pre-commit", "run", "--all-files"]
]
dependency_groups = ["lint"]
description = "run pre-commit on code base"
pass_env = ["SKIP"]
runner = "uv-venv-lock-runner"

[tool.tox.env.type]
commands = [["pyright"]]
dependency_groups = ["type"]
description = "run type check on code base"
runner = "uv-venv-lock-runner"

[tool.tox.env_run_base]
commands = [
  ["coverage", "run", "--source", "asyncpraw", "--module", "pytest", "{posargs}"],
  ["coverage", "report", "-m", "--fail-under=100"]
]
dependency_groups = ["test"]
description = "Run test under {base_python}"
pass_env = ["ENSURE_NO_UNUSED_CASSETTES"]
runner = "uv-venv-lock-runner"
